--- a/FrontEnd/dapp/package.json
+++ b/FrontEnd/dapp/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "1",
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
